--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "iron-ajax": "PolymerElements/iron-ajax#2.0-preview",
     "neon-animation": "PolymerElements/neon-animated-pages#2.0-preview",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.1",
-    "web-animations-js": "web-animations/web-animations-js#^2.2.0"
+    "web-animations-js": "web-animations/web-animations-js#^2.2.0",
+    "iron-image": "PolymerElements/iron-image#2.0-preview"
   }
 }
